COSMETIC: generics-related warnings removed