@@ -1,5 +1,5 @@
 /*-
- * $Id: EnumUtil.java,v 1.9 2006/03/16 08:48:11 arseniy Exp $
+ * $Id: EnumUtil.java,v 1.10 2006/03/27 11:28:12 bass Exp $
  *
  * Copyright ¿ 2004-2005 Syrus Systems.
  * Dept. of Science & Technology.
@@ -12,15 +12,15 @@ import java.util.HashMap;
 import java.util.Map;
 
 /**
- * @version $Revision: 1.9 $, $Date: 2006/03/16 08:48:11 $
- * @author $Author: arseniy $
+ * @version $Revision: 1.10 $, $Date: 2006/03/27 11:28:12 $
+ * @author $Author: bass $
  * @author Tashoyan Arseniy Feliksovich
  * @module util
  */
 public final class EnumUtil {
 	private static final String VALUE_OF_METHOD_NAME = "valueOf";
 
-	private static final Map<Class, Method> VALUE_OF_METHODS = new HashMap<Class, Method>();
+	private static final Map<Class<?>, Method> VALUE_OF_METHODS = new HashMap<Class<?>, Method>();
 
 	private EnumUtil() {
 		//singleton
@@ -39,18 +39,19 @@ public final class EnumUtil {
 		}
 
 		try {
-			return (E) valueOfMethod.invoke(null, new Integer(intValue));
-		} catch (Exception e) {
+			@SuppressWarnings("unchecked")
+			final E e = (E) valueOfMethod.invoke(null, Integer.valueOf(intValue));
+			return e;
+		} catch (final Exception e) {
 			Log.errorMessage(e);
 			throw new IllegalArgumentException(e.getMessage(), e);
 		}
-			
 	}
 
-	private static Method reflectMethodFromInt(final Class enumClass) {
+	private static Method reflectMethodFromInt(final Class<? extends Enum<?>> enumClass) {
 		try {
 			return enumClass.getDeclaredMethod(VALUE_OF_METHOD_NAME, int.class);
-		} catch (Exception e) {
+		} catch (final Exception e) {
 			throw new IllegalArgumentException(e.getMessage(), e);
 		}
 	}
